# serializer version: 1
# name: test_entities_created[media_player.marantz_receiver-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'am',
        'am2',
        'aux1',
        'aux2',
        'bd',
        'cd',
        'cd_cdr',
        'cd_r',
        'dss_vcr2',
        'dvd',
        'fm',
        'ld',
        'mxport',
        'network',
        'sirius',
        'tape',
        'tuner',
        'tv',
        'usb',
        'vcr1',
        'vcr2',
        'xm',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.marantz_receiver',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'marantz_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3468>,
    'translation_key': 'receiver',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.marantz_receiver-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Marantz receiver',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'dvd',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'am',
        'am2',
        'aux1',
        'aux2',
        'bd',
        'cd',
        'cd_cdr',
        'cd_r',
        'dss_vcr2',
        'dvd',
        'fm',
        'ld',
        'mxport',
        'network',
        'sirius',
        'tape',
        'tuner',
        'tv',
        'usb',
        'vcr1',
        'vcr2',
        'xm',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 3468>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.40816326530612246,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.marantz_receiver',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities_created[media_player.marantz_receiver_multi_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'am',
        'am2',
        'aux1',
        'aux2',
        'bd',
        'cd',
        'cd_cdr',
        'cd_r',
        'dss_vcr2',
        'dvd',
        'fm',
        'ld',
        'mxport',
        'network',
        'sirius',
        'tape',
        'tuner',
        'tv',
        'usb',
        'vcr1',
        'vcr2',
        'xm',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.marantz_receiver_multi_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Multi-room',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': 'Multi-room',
    'platform': 'marantz_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3468>,
    'translation_key': 'multi_room',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_multi_room_a',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.marantz_receiver_multi_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Marantz receiver Multi-room',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'tv',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'am',
        'am2',
        'aux1',
        'aux2',
        'bd',
        'cd',
        'cd_cdr',
        'cd_r',
        'dss_vcr2',
        'dvd',
        'fm',
        'ld',
        'mxport',
        'network',
        'sirius',
        'tape',
        'tuner',
        'tv',
        'usb',
        'vcr1',
        'vcr2',
        'xm',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 3468>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.5102040816326531,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.marantz_receiver_multi_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
